syntax = "proto3";

package tensorflow.serv ng;

 mport "tensorflow_serv ng/ap s/class f cat on.proto";
 mport "tensorflow_serv ng/ap s/ nference.proto";
 mport "tensorflow_serv ng/ap s/logg ng.proto";
 mport "tensorflow_serv ng/ap s/pred ct.proto";
 mport "tensorflow_serv ng/ap s/regress on.proto";
 mport "tensorflow_serv ng/ap s/sess on_serv ce.proto";

opt on cc_enable_arenas = true;

 ssage Class fyLog {
  Class f cat onRequest request = 1;
  Class f cat onResponse response = 2;
}

 ssage RegressLog {
  Regress onRequest request = 1;
  Regress onResponse response = 2;
}

 ssage Pred ctLog {
  Pred ctRequest request = 1;
  Pred ctResponse response = 2;
}

 ssage Mult  nferenceLog {
  Mult  nferenceRequest request = 1;
  Mult  nferenceResponse response = 2;
}

 ssage Sess onRunLog {
  Sess onRunRequest request = 1;
  Sess onRunResponse response = 2;
}

// Logged model  nference request.
 ssage Pred ct onLog {
  Log tadata log_ tadata = 1;
  oneof log_type {
    Class fyLog class fy_log = 2;
    RegressLog regress_log = 3;
    Pred ctLog pred ct_log = 6;
    Mult  nferenceLog mult _ nference_log = 4;
    Sess onRunLog sess on_run_log = 5;
  }
}
